Add push to main branch.

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -41,5 +41,6 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           context: ./src
+          push: true
           tags: ${{ env.REGISTRY }}:latest
           labels: ${{ steps.meta.outputs.labels }}
