Update to remove the :latest tag on the versioned builds

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -37,7 +37,7 @@ jobs:
         with:
           context: ./src
           push: true
-          tags: ${{ steps.meta.outputs.tags }},${{ env.REGISTRY }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       - name: Build and Push Latest Docker Image
         id: build-and-push-latest
